# rolo

./: .gitignore  Cargo.toml  NEXT.md  README.md  ROADMAP.txt  TASKS.txt  TEST_COMPLIANCE_PLAN.md  rust-toolchain.toml  test_tree.sh
.cargo/: config.toml
.eggs/: RSB_CLI_PATTERNS.egg  RSB_GLOBAL_OPTIONS.egg  RSB_MODULE_SPEC.egg  ecosystem_summary.egg  egg.1.rolo-project-overview.txt  egg.8.uat-visual-demonstration-analysis.txt  egg.9.test-theater-audit-CRITICAL.txt  rsb_integration.egg  stakeholder_requirements.egg
.session/: SESSION_01_rolo_foundation_complete.md  SESSION_02_rsb_transformation_complete.md  SESSION_NOTES.md
docs/: rolo_prd.md
docs/features/: FEATURES_CLI.md  FEATURES_COLUMN_MODE.md  FEATURES_LAYOUT_MODES.md  FEATURES_SEPARATOR_SUPPORT.md  FEATURES_TABLE_MODE.md  FEATURES_TEST_INFRASTRUCTURE.md  FEATURES_VISUAL_UAT.md  FEATURES_WIDTH.md
examples/: boxy_integration.rs  coordinate_demo.rs  dynamic_updates.rs
naive/: CLAUDE_HOOKS_REFERENCE.md  CONTINUE.md  animated_coordinate_demo.sh  chat_boxy_demo.sh  chat_boxy_v2.sh  chat_demo.sh  chat_facts_jynx_paradise.sh  chat_popup_demo.sh  coordinate_drawing_chat.sh  demo.sh  interactive_coordinate_demo.sh  multipane_borders_demo.sh  multipane_boxy_demo.sh  multipane_facts_paradise.sh  multipane_feed_demo.sh  multipane_feed_noflicker.sh  multipane_positioning_demo.sh  scrolling_regions_demo.sh  simple_coordinate_demo.sh
naive/.session/: SESSION_01_rolo_terminal_layout_engine.md  SESSION_02_zellij_architecture_breakthrough.md  SESSION_03_coordinate_breakthrough.md  SESSION_04_screen_breakthrough.md  SESSION_05_tmux_multiplexer.md
src/: lib.rs  main.rs
src/cli/: dispatch.rs  error.rs  helpers.rs  mod.rs  utils.rs
src/layout/: column.rs  error.rs  helpers.rs  list.rs  macros.rs  mod.rs  table.rs  utils.rs
src/stream/: error.rs  helpers.rs  mod.rs  utils.rs
src/width/: error.rs  helpers.rs  mod.rs  utils.rs  width_boxy_adapter.rs
tests/: baseline_main.rs  feature_gated_main.rs  features_main.rs  prelude_test.rs  sanity_main.rs  stream_sanity.rs  uat_main.rs  visual_demo_main.rs  visual_uat_main.rs
tests/baseline/: column_mode.rs  core_functionality.rs  default_behavior.rs  error_handling.rs  integration_with_test_data.rs  mode_integration.rs  table_mode.rs  terminal_width_detection.rs
tests/data/: README.md  ansi_colors.tsv  long_content.tsv  sample.csv  sample.tsv  uneven_rows.tsv  unicode_content.tsv
tests/feature_gated/: csv_support.rs  json_support.rs  visual.rs  width_boxy.rs
tests/features/: cli_features.rs  width_features.rs
tests/features/layout/: list_features.rs
tests/sanity/: baseline.rs  column_mode.rs
tests/uat/: acceptance_baseline.rs  cli_acceptance.rs  prelude_acceptance.rs  width_acceptance.rs
tests/visual_uat/: column_formatting.rs  column_mode_uat.rs  list_formatting.rs  separator_demo.rs  table_formatting.rs  width_integration.rs
